Alteração de Layout issue #4
aliamento de elemento (CSS)

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -27,7 +27,7 @@ body {
 }
 
 .tab-pane {
-  margin-top: 15px;
+  margin-top: 5px;
 }
 
 /* Page Sections */
